new vision index.html

--- a/index.html
+++ b/index.html
@@ -1,13 +1,9 @@
 <! DOCTYPE html>
 <html>
 <head>
-<title>Jsp Demo</title>
+<title>Hello World of Github</title>
 </head>
 <body>
-<form action="/demoServlet" method="post">
-	name: <input type="text" name="name"/>
-	password:<input type="password" name="password" />
-	
-</form>
+<h1>Hello World of Github</h1>
 </body>
 </html>
